Bump from Spring Boot 3.2.1 to 3.4.1